--- a/static/downloadingWebsite/css/style.css
+++ b/static/downloadingWebsite/css/style.css
@@ -2,9 +2,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&family=Poppins&display=swap');
 
 html {
-    height: 100%;
     margin: 0;
     padding: 0;
+    min-height: 100%;
+    max-height: 100%;
 }
 
 body {
@@ -12,8 +13,9 @@ body {
     --secondary-background-color: #FBEAEB;
     margin: 0;
     padding: 0;
-    height: 100%;
     background-color: var(--primary-background-color);
+    min-height: 100%;
+    max-height: 100%;
 }
 
 .primaryHeader{
@@ -33,10 +35,10 @@ body {
     display: flex;
     flex-direction: column;
     background-color:var(--secondary-background-color);
-    height: 90%;
-    width: 98.5%;
     border-radius: 10px;
     align-items: center;
+    height: 85vh;
+    max-height: 100%;
 }
 
 .fileItems{
