Added fileManager wrapper class for filesystem

--- a/static/downloadingWebsite/css/style.css
+++ b/static/downloadingWebsite/css/style.css
@@ -47,6 +47,19 @@ body {
     text-overflow:clip;
     display: flex;
     vertical-align: middle;
+    min-width: 80%;
+    max-width: 80%;
+}
+
+.fileSizeDiv{
+
+    display: table;
+    color: white;
+}
+
+.textDiv{
+    display: table-cell;
+    vertical-align: middle;
 }
 
 .fileItems{
