--- a/static/downloadingWebsite/css/style.css
+++ b/static/downloadingWebsite/css/style.css
@@ -6,6 +6,7 @@ html {
     padding: 0;
     min-height: 100%;
     max-height: 100%;
+    height: 100%;
 }
 
 body {
@@ -16,6 +17,7 @@ body {
     background-color: var(--primary-background-color);
     min-height: 100%;
     max-height: 100%;
+    height: 100%;
 }
 
 .primaryHeader{
@@ -27,8 +29,14 @@ body {
     margin-right: 2rem;
 }
 
+button {
+    border: none;
+    cursor: pointer;
+    appearance: none;
+    background-color: inherit;
+}
+
 #primary {
-    font-family: 'Bruno Ace SC', cursive;
     font-family: 'Poppins', sans-serif;
     margin-left: 1rem;
     margin-right: 1rem;
@@ -37,9 +45,18 @@ body {
     background-color:var(--secondary-background-color);
     border-radius: 10px;
     align-items: center;
-    height: 85vh;
-    max-height: 100%;
+    height: 82%;
     overflow: auto;
+}
+
+#contentDiv{
+    font-family: 'Poppins', sans-serif;
+    display: flex;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+    overflow: auto;
+    flex-direction: column;
 }
 
 .fileNameDiv{
